# local_util

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  jsonUtil.c  jsonUtil.h  localUtil.c  localUtil.cpp  localUtil.h  localUtil_cpp.h  localUtil_linux.c  localUtil_linux.cpp  localUtil_linux.h  localUtil_windows.c  localUtil_windows.h  localUtil_xnu.c  localUtil_xnu.h
linux_compat/: elf.h
windows_compat/: Windows.h
